--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,5 +108,5 @@ jobs:
           #platforms: linux/amd64,linux/arm/v7
           platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.<meta_id>.outputs.tags }}
-          labels: ${{ steps.<meta_id>.outputs.labels }}
+          tags: ${{ steps.meta_id.outputs.tags }}
+          labels: ${{ steps.meta_id.outputs.labels }}
