--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            defaultbackend
+            ghcr.io/${{ github.repository_owner }}/defaultbackend
           # Docker tags based on the following events/attributes
           tags: |
             type=schedule
